plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.11'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.epages.restdocs-api-spec' version '0.17.1'
}

group = 'site.ng-archive'
version = '0.0.1-SNAPSHOT'
description = 'ecom stock api service'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

openapi3 {
    title = 'Stock Service API'
    description = 'ecom 서비스의 재고 API 문서'
    version = '1.0.0'
    format = 'yaml'
    servers = [
            {
                url='http://localhost:8080'
                description='로컬 개발 서버'
            },
            {
                url='https://api.example.com'
                description='운영 서버'
            }
    ]
}

tasks.register('copyOpenApiSpec', Copy) {
    dependsOn 'openapi3'

    from "build/api-spec/openapi3.yaml"
    into "static"
    rename { String fileName -> fileName.replace("openapi3.yaml", "apispec.yaml") }
    into "src/main/resources/static"
    rename { String fileName -> fileName.replace("openapi3.yaml", "apispec.yaml") }
}

repositories {
	mavenCentral()
}

test {
    useJUnitPlatform()
    finalizedBy 'openapi3'

    jvmArgs "-XX:+EnableDynamicAgentLoading"
    jvmArgs "-Xshare:off"
}

build.dependsOn 'openapi3'
bootJar.dependsOn 'openapi3'

afterEvaluate {
    tasks.named('openapi3') {
        finalizedBy 'copyOpenApiSpec'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.16'
    implementation 'org.mindrot:jbcrypt:0.4'
    implementation 'com.auth0:java-jwt:4.4.0'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.r2dbc:r2dbc-h2'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'io.r2dbc:r2dbc-h2'
    testRuntimeOnly 'com.h2database:h2'
    testImplementation 'io.rest-assured:rest-assured'
    testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient'
    testImplementation 'io.rest-assured:spring-web-test-client'
    testImplementation 'com.epages:restdocs-api-spec:0.17.1'
    testImplementation 'com.epages:restdocs-api-spec-webtestclient:0.17.1'
    testImplementation 'net.datafaker:datafaker:2.4.0'
}
